fixed footer for mobile iphone 6, 7,8 removed whitespace

--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -91,4 +91,7 @@ footer {
   .netlify-icon {
     display: inline;
   }
+  p {
+    margin-bottom: 0px;
+  }
 }
