--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -97,12 +97,14 @@ a {
 } */
 /* iphone 6, 6s, 7, 8 */
 @media only screen and (min-device-width: 375px) and (max-device-height: 667px) and (-webkit-device-pixel-ratio: 2) {
-  .parallax {
+  /* .parallax {
     height: 500px;
-    background-size: cover;
-    background-position: center; 
-  }
- 
+    background-image: url(../images/coding.jpg);
+    background-size: contain;
+    background-position: unset;
+    object-fit: contain;
+  } */
+
   header {
     display: none;
   }
